--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
 /* Styling the header */
 .app__header {
   display: flex;
-  padding: 6rem 10rem 3rem;
+  padding: 4rem 10rem 3rem;
   justify-content: space-between;
   align-items: center;
   align-content: center;
@@ -124,7 +124,7 @@ p {
 }
 .chart__text > p {
   padding-bottom: 2rem;
-  width: 80%;
+  width: 64%;
   text-align: left;
 }
 .chart__img {
@@ -280,10 +280,11 @@ p {
   line-height: 2.5rem;
   color: var(--dark_blue);
   font-size: 39px;
+  line-height: 1.3;
 }
 .about__left > p {
   padding-bottom: 2rem;
-  width: 80%;
+  width: 64%;
   text-align: left;
 }
 
@@ -302,10 +303,11 @@ p {
 
 .number {
   background-color: var(--bright_red);
-  padding: 0.3rem 1.3rem;
+  padding: 0.5rem 1.3rem;
   border-radius: 1rem;
   height: 27%;
   color: var(--very_pale_red);
+  font-weight: 700;
 }
 h4 {
   color: var(--dark_blue);
@@ -469,8 +471,9 @@ h4 {
 }
 .content__prefooter > h1 {
   color: var(--vary_light_gray);
-  width: 40%;
+  width: 50%;
   font-weight: 700;
+  font-size: 39px;
 }
 
 .prefooter__button {
