--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ p {
   display: flex;
   padding: 2rem 10rem 0;
   width: 100%;
-  padding-bottom: 4rem;
+  padding-bottom: 8rem;
   justify-content: center;
   align-items: center;
 }
@@ -455,19 +455,19 @@ h4 {
 /* Styling the prefooter */
 
 .content__prefooter {
-  padding: 4rem 10rem;
   display: flex;
+  padding: 4rem 10rem;
+  width: 100%;
+  max-width: 100%;
+  position: relative;
   background-color: var(--bright_red);
   background-image: url(./images/bg-simplify-section-desktop.svg);
   background-repeat: no-repeat;
-  background-position: left bottom;
+  background-position: 240px -120px;
   background-size: cover;
   justify-content: space-between;
   align-items: center;
   align-content: center;
-  width: 100%;
-  max-width: 100%;
-  position: relative;
 }
 .content__prefooter > h1 {
   color: var(--vary_light_gray);
